--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,9 @@ body.dark-mode {
     color: #acacac;
     border: 1px solid #444444;
 }
+.container.dark-mode input[type="url"] {
+    color: #acacac;
+  }
 .container.dark-mode button:hover {
     background-color: #555555;
 }
